--- a/assets/scss/scss-utilities/utilities.scss
+++ b/assets/scss/scss-utilities/utilities.scss
@@ -23,6 +23,7 @@ $color-indigo                                                   : #4F46E5;
 $color-orange                                                   : #EA580C;
 $color-purple                                                   : #9333EA;
 $color-red                                                      : #DC2626;
+$color-yellow                                                   : #eab308;
 
 // =============================================================================
 // String Replace
