--- a/assets/scss/scss-master/master-global/global-general.scss
+++ b/assets/scss/scss-master/master-global/global-general.scss
@@ -36,6 +36,7 @@
     --color-orange                                              : #EA580C;
     --color-purple                                              : #9333EA;
     --color-red                                                 : #DC2626;
+    --color-yellow                                              : #eab308;
 
     // Transition
 
@@ -270,6 +271,10 @@ svg {
 
 .color-white {
     color       : var(--color-white);
+}
+
+.color-yellow {
+    color       : var(--color-yellow);
 }
 
 // Cursor
